# blob-matcher

./: .gitignore  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  annotate.py  blobs.py  evaluate_matching.ipynb  generate_dataset.py  generate_detector_gt.py  notes.md  plot_blobs.py  pyproject.toml  real_homographies.pt  requirements.txt  todo.md
blob_matcher/: __init__.py  annotate.py
blob_matcher/configs/: init_blobinator.yml
blob_matcher/modules/: generate_dataset.py
blob_matcher/modules/hardnet/: models.py
configs/: defaults.py  init.yml  init_blobinator.yml
data/models/: default.pth
docs/: conf.py  index.rst
modules/: __init__.py  blob_matcher.py
modules/hardnet/: hardnet.py  losses.py  models.py  utils.py
modules/ptn/pytorch/: blobinator_dataset.py  data.py
src/blob_matcher/: __init__.py  homography.py  keypoints.py
src/blob_matcher/configs/: defaults.py
src/blob_matcher/hardnet/: __init__.py  data.py  eval_metrics.py  loggers.py  losses.py  models.py  utils.py
src/blob_matcher/keypoints/: __init__.py
src/blob_matcher/modules/hardnet/: models.py
src/blob_matcher/modules/ptn/pytorch/: data.py
src/blob_matcher/scripts/: __init__.py  annotate.py  evaluate_matching.py  generate_dataset.py  hardnet.py  matrix_train.py  measure_speed.py  register_homographies.py
src/blob_matcher/unet/: models.py
src/blob_matcher/utils/: __init__.py  functional.py
workflows/: documentation.yml
