[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"


[project]
name = "blob-matcher"
version = "0.1.1"
authors = [
    { name="Hendrik Sauer", email="hendrik-sauer@mailbox.org" },
]
description = "Feature Matcher for the BlobBoards"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "opencv-python >= 4.12.0",
    "kornia >= 0.8.1",
    "numpy >= 2.2.6",
    "pdf2image >= 1.17",
    "Pint >= 0.25",
    "seaborn >= 0.13.2",
    "torch >= 2.8.0",
    "torchvision >= 0.23.0",
    "tqdm >=4.67.1",
    "yacs >= 0.1.8",
]

[project.scripts]
blob-matcher-annotate = "blob_matcher.scripts.annotate:main"
blob-matcher-evaluate = "blob_matcher.scripts.evaluate_matching:main"
blob-matcher-generate = "blob_matcher.scripts.generate_dataset:main"
blob-matcher-train = "blob_matcher.scripts.hardnet:main"
blob-matcher-speed = "blob_matcher.scripts.measure_speed:main"

[project.urls]
Homepage = "https://github.com/the-sauer/log-polar-descriptors"


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
blob_matcher = ["data/models/default.pth", "configs/*.yml"]
